--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fnando/cpf": "^1.0.2",
+    "@hookform/resolvers": "^2.9.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/pickers": "^3.3.10",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-admin": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
