--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
+    "pdfmake": "^0.2.5",
     "react": "^18.2.0",
     "react-admin": "^4.3.1",
     "react-dom": "^18.2.0",
